--- a/index.html
+++ b/index.html
@@ -12,24 +12,20 @@
 </head>
 
 <body>
-    <div class="container-xxl container-lg container-md container-sm mt-5">
-        <div class="flex row g-1 mb-3">
+    <div class="container-xxl container-lg container-md container-sm mt-5 ">
+        <div class="flex row justify-content-center g-1 mb-3">
             <div class="col-4">
-                    <span class="input-group-text" id="basic-addon1">hours</span>
-                    <input type="number" class="form-control" id="inputHr" placeholder="hours" aria-label="Hours"
-                        aria-describedby="basic-addon1" value="0" />
+                <input type="number" class="form-control" id="inputHr" placeholder="hours" aria-label="Hours"
+                        aria-describedby="basic-addon1" />
             </div>
             <div class="col-4">
-                    <span class="input-group-text" id="basic-addon2">minutes</span>
-                    <input type="number" class="form-control" id="inputMin" placeholder="minutes" aria-label="Minutes"
-                        aria-describedby="basic-addon2" value="0" />
+                <input type="number" class="form-control" id="inputMin" placeholder="minutes" aria-label="Minutes"
+                        aria-describedby="basic-addon2" />
             </div>
             <div class="col-4">
-                    <span class="input-group-text" id="basic-addon3">seconds</span>
-                    <input type="number" class="form-control" id="inputSec" placeholder="seconds" aria-label="Seconds"
-                        aria-describedby="basic-addon3" value="0" />
+                <input type="number" class="form-control" id="inputSec" placeholder="seconds" aria-label="Seconds"
+                        aria-describedby="basic-addon3" />
             </div>
-        </div>
         <div class="center w-100">
             <button id="submit" class="btn btn-primary w-100 mb-2">start</button>
             <button id="pause" class="btn btn-primary w-100 mb-2">pause</button>
