current date and time addition

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 
 <body>
-    <div class="container-xxl container-lg container-md container-sm mt-5 ">
+    <div class="container-xxl container-lg container-md container-sm mt-5 text-center">
+        <h1 id="currentTime"></h1>
         <div class="flex row justify-content-center g-1 mb-3">
             <div class="col-4">
                 <input type="number" class="form-control" id="inputHr" placeholder="hours" aria-label="Hours"
@@ -31,6 +32,7 @@
             <button id="pause" class="btn btn-primary w-100 mb-2">pause</button>
             <button id="reset" class="btn btn-primary w-100 mb-2">reset</button>
         </div>
+        <h2 id="currentDate"></h2>
     </div>
 </body>
 
