dark mode and light mode switch

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
 </head>
 
-<body>
+<body class="bodyLight">
+    <div class="flex">
+        <button id="lightMode"><img src="assets/lightmode.png"/></button>
+        <button id="darkMode"><img src="assets/nightmode.png"/></button>
+    </div>
+    
     <div class="container-xxl container-lg container-md container-sm mt-5 text-center">
         <h1 id="currentTime"></h1>
         <div class="flex row justify-content-center g-1 mb-3">
